# limef-apps

./: .gitignore  README.md
cpp/base/: CMakeLists.txt  rtsp_server.cpp  run_cmake.bash
cpp/onnx/: CMakeLists.txt  tensorframe_ort.h
cpp/opencv/: CMakeLists.txt  gpu_opencv_test.cpp  gpu_opencv_thread.h  run_cmake.bash  tensorframe_opencv.h  usb_gpu_pipeline.cpp
cpp/torch/: CMakeLists.txt  run_cmake.bash  tensorframe_torch.h
ext/: build_ext.bash  download_opencv.bash  make_opencv_deb.bash
python/: README.md  play_file.py  rtsp_client.py  rtsp_server.py  smoke_test.bash  usb_cpu_gpu.py  usb_cpu_gpu2.py  usb_gpu_pipeline.py  webrtc_html_demo.py  ws_html_demo.py
python/webrtc_html_demo/static/: index.html
python/ws_html_demo/static/: index.html
